manifest/services.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-gke-service
  labels:
    name: sample-gke-service
spec:
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
  selector:
    app: sample-gke
  type: LoadBalancer
